--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "css-loader": "^6.7.1",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^5.5.0",
     "if-env": "^1.0.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
